<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:id="@+id/fragment_recognition_landing_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:visibility="visible">
        <LinearLayout
            android:id="@+id/fragment_recognition_select_pic_ll"
            android:background="@color/green"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fitsSystemWindows="true">
            <TextView
                android:textAllCaps="true"
                android:padding="32dp"
                style="?android:attr/textAppearanceLarge"
                android:text="@string/select_picture"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_recognition_take_pic_ll"
            android:background="@color/purple"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fitsSystemWindows="true">
            <TextView
                android:textColor="@android:color/white"
                android:textAllCaps="true"
                android:padding="32dp"
                style="?android:attr/textAppearanceLarge"
                android:text="@string/take_pic"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:background="@color/colorPrimary"
        android:id="@+id/fragment_recognition_main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">
        <ImageView
            android:layout_marginTop="10dp"
            android:id="@+id/fragment_recognition_image_view"
            android:layout_weight="0.4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"/>

        <TextView
            android:paddingTop="10dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            style="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:text="@string/tag_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- loading?? - todo!?!? -->

        <GridView
            android:id="@+id/fragment_recognition_tags_gridview"
            android:textColor="@android:color/white"
            android:paddingTop="10dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp"
            android:layout_weight="0.3"
            android:numColumns="3"
            android:layout_gravity="center"
            android:gravity="center"
            android:verticalSpacing="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <LinearLayout
            android:id="@+id/fragment_recognition_choose_diff_ll"
            android:layout_weight="0.1"
            android:background="@color/red"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal">
            <LinearLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@android:color/white"
                    android:text="@string/choose_diff_pic"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_go_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_recognition_copy_tags_ll"
            android:layout_weight="0.1"
            android:background="@color/darkGreen"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal">
            <LinearLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@android:color/white"
                    android:text="@string/open_in_sm"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_arrow_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
